--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "node -r ts-node/register src/server.ts",
+        "dev": "npx ts-node-dev --inspect=0.0.0.0:9229 --transpile-only --respawn -- src/server.ts",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
@@ -12,6 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "cors": "^2.8.5",
+        "discord.js": "^14.11.0",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "pg": "^8.11.1",
@@ -25,6 +26,7 @@
         "@types/node": "^20.4.1",
         "@types/strong-error-handler": "^3.2.1",
         "ts-node": "^10.9.1",
+        "ts-node-dev": "^2.0.0",
         "typescript": "^5.1.6"
     }
 }
