--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.4.0",
         "cors": "^2.8.5",
         "discord.js": "^14.11.0",
         "dotenv": "^16.3.1",
